modern language use + code cleaning