@@ -12,7 +12,6 @@ import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.BookMeta;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Collections;
 import java.util.List;
 
 public class BookType extends SubCmd {
@@ -63,6 +62,6 @@ public class BookType extends SubCmd {
         if (args.length == 2) {
             return CompleteUtility.complete(args[1], Aliases.BOOK_TYPE);
         }
-        return Collections.emptyList();
+        return List.of();
     }
 }
