@@ -11,7 +11,6 @@ import org.bukkit.inventory.meta.Damageable;
 import org.bukkit.inventory.meta.ItemMeta;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Collections;
 import java.util.List;
 
 public class MaxDurability extends SubCmd {
@@ -44,16 +43,21 @@ public class MaxDurability extends SubCmd {
 
     @Override
     public List<String> onComplete(@NotNull CommandSender sender, String[] args) {
-        if (args.length == 2) {
-            if (sender instanceof Player) {
-                ItemStack item = this.getItemInHand((Player) sender);
-                if (item != null && item.getType().getMaxDurability() > 1) {
-                    int max = item.getType().getMaxDurability();
-                    return CompleteUtility.complete(args[1], "1", String.valueOf(max), String.valueOf(max / 2), String.valueOf(max / 4), String.valueOf(max / 4 * 3));
-                }
-            }
+        if (args.length != 2 || !(sender instanceof Player player)) {
+            return List.of();
         }
-        return Collections.emptyList();
+        ItemStack item = getItemInHand(player);
+        if (item == null || item.getType().getMaxDurability() <= 1) {
+            return List.of();
+        }
+        int max = item.getType().getMaxDurability();
+        return CompleteUtility.complete(
+                args[1],
+                "1",
+                String.valueOf(max),
+                String.valueOf(max / 2),
+                String.valueOf(max * 2)
+        );
     }
 
 }
