@@ -13,7 +13,6 @@ import org.bukkit.entity.Player;
 import org.bukkit.inventory.meta.components.consumable.ConsumableComponent;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Collections;
 import java.util.List;
 
 public class Animation extends SubCmd {
@@ -56,7 +55,7 @@ public class Animation extends SubCmd {
     @Override
     public List<String> onComplete(@NotNull CommandSender sender, String[] args) {
         if (args.length != 2) {
-            return Collections.emptyList();
+            return List.of();
         }
         if (!VersionUtils.isAfter(1, 21, 4)) {
             return CompleteUtility.complete(args[1], Aliases.ANIMATION_OLD);
